--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,26 @@ h2 a {color:#c50218!important;}
     top:6px;
 left:-2px;
 }
-
+.icon-noun_122924_cc.fa-stack-1x {
+    top:5px;
+left:1px;
+}
+.fa-lightbulb-o.fa-stack-1x {
+    top:3px;
+left:0px;
+}
+.fa-book.fa-stack-1x {
+    top:1px;
+left:3px;
+}
+.fa-balance-scale.fa-stack-1x {
+    top:4px;
+left:2px;
+}
+.fa-leaf.fa-stack-1x {
+    top:6px;
+left:-2px;
+}
 /* smanettamenti NELSON */
 
 
@@ -196,7 +215,7 @@ div#approfondimenti h1 {
   text-align: left;    
 }
 #macrocategorie a:hover {
-opacity:0.7;
+opacity:0.8;
 background:#000;
   
 }
@@ -229,6 +248,7 @@ p.valdesi {margin-top:30px;}
 
 a.btn.btn-default.btn-lg {
   font-size:2.2rem;
+font-weight:bold;
 }
 
 /** Pagina di dettaglio - Welfare **/
@@ -557,3 +577,19 @@ span.tutto .text-primary{
   font-weight: bold;
   font-size: 32px;
 }
+
+
+
+@media (max-width: 767px) {
+  .slogan h3 {
+  color: #c50218;
+  font-size: 22px!important;
+}.slogan h1 {  
+  font-size: 36px;
+  line-height: 40px;
+}
+.btn.btn-default.btn-lg {
+    font-size: 1.8rem!important;
+    font-weight: bold;
+}
+
