--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ div#approfondimenti {
 footer a {
   color:#C50218 !important;
 }
+footer p {margin:2px 0px; padding:2px 0px}
 
 .jumbotron {
   padding-bottom: 0px;
