--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ left:3px;
 left:2px;
 }
 .fa-leaf.fa-stack-1x {
-    top:6px;
+    top:5px;
 left:-2px;
 }
 /* smanettamenti NELSON */
@@ -119,10 +119,7 @@ h1, h3 {
 }
 
 div#intro {
-  /*background: url(../images/altanbg.jpg) center right;*/
-  /*background-size: 40%;
-  background-repeat: no-repeat;
-  min-height: 600px;*/
+margin-top:50px
 }
 
 .slogan h1, .slogan h3 {
@@ -178,10 +175,19 @@ padding-right:0px!important;
     font-size: 19px;
     line-height: 1.3;
 }
+.page-header.home {
+    border-bottom: 1px solid #eee;
+    margin: 20px 0 10px;
+    padding-bottom: 0;
+}
 .page-header {
     border-bottom: 1px solid #eee;
-    margin: 10px 0 0;
+    margin: 50px 0 20px;
     padding-bottom: 0;
+}
+
+.page-header h1 {
+    margin-bottom:0px;
 }
 
 span.fa-stack {
@@ -572,14 +578,25 @@ span.tutto .text-primary{
 }
 /* tooltip */
 
-.scarica{
+a.scarica {
   font-family: 'Montserrat', sans-serif;
   color: #C50218 !important;
   font-weight: bold;
-  font-size: 32px;
+  font-size: 28px;
+margin-top:5px;
 }
+a.readmore
+{  font-family: 'Montserrat', sans-serif;
+  color: #C50218 !important;font-size:21px;font-weight:normal!important	;}
 
-
+#scaricatab .fa-stack-1x, #scaricatab  .fa-stack-2x {
+    left: -10px;
+    top: -7px;
+}
+h1.ambiente{font-size:50px}
+footer i {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;font-style:italic;}
 
 @media (max-width: 767px) {
   .slogan h3 {
